--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Git Aula 1</title>
 </head>
 <body>
-    <h1>Alô, Conjunto José Walter!</h1>
+    <h1>Alternativa A</h1>
+    
 </body>
 </html>
