Nova versão atualizada

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Git Aula 1</title>
 </head>
 <body>
-    <h1>Alternativa A</h1>
+    <h1>Alterando para a versão b</h1>
     
 </body>
 </html>
