Recentes trocas em alternativa-b

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Alterando para a versão b</h1>
-    
+    <h2>This version it will be united with a version new</h2>
 </body>
 </html>
